# sea-techtalk

./: .gitignore  01_np_plt.py  020_excel_csv.py  02_excel_csv.py  030_pdf.py  03_rcsec.py  041_rcsec.py  042_rc_analysis.py  051_secprop.py  061_docxgen.py  README.md  brent.py  bridge_section.dxf  certificate_template.docx  footing.py  footing_design.xlsx  main.py  output.csv  pyproject.toml  rc_footing_design.py  rcd_app.py  rcd_bending_rect.ipynb  rcd_bending_rect.py  rcd_bending_rect_2.ipynb  rcd_column.py  reactions.xlsx  slides.py  sp6_1.xlsx  steel_design.py  trg_prog_data.xlsx
