[project]
name = "jup"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "cad-to-shapely>=0.3.2",
    "docx-mailmerge2>=1.0.1",
    "fastexcel>=0.18.0",
    "marimo>=0.18.4",
    "matplotlib>=3.10.8",
    "notebook>=7.5.1",
    "numpy>=2.4.0",
    "openpyxl>=3.1.5",
    "pandas>=2.3.3",
    "polars>=1.37.0",
    "pymupdf>=1.26.7",
    "rcdesign>=0.4.18",
    "sectionproperties>=3.10.0",
    "sympy>=1.14.0",
    "tabula-py[jpype]>=2.10.0",
]

[tool.uv]
required-environments = [
    "sys_platform == 'linux' and platform_machine == 'x86_64'",
    "sys_platform == 'linux' and platform_machine == 'aarch64'",
]

